Fix for Safari: Contacts App column filter input text is not visible.

--- a/src/styles/react-table.css
+++ b/src/styles/react-table.css
@@ -33,6 +33,7 @@ ReactTable Overrides
     border: none;
     background: initial;
     padding: 6px 0 7px 0;
+    box-sizing: content-box;
 }
 
 .ReactTable .-pagination .-center {
